add github icon

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,6 +27,16 @@
 
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
+{% comment %}
+Added footer for github icon
+{% endcomment %}
+  <div class="sidebar-item">
+    <div class="container">
+      <footer class="footer">
+        {% include svg-icons.html %}
+      </footer>
+    </div>
+  </div>
 
   <div class="sidebar-item">
     <p>
