--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,10 +30,11 @@
 {% comment %}
 Added footer for github icon
 {% endcomment %}
+
   <div class="sidebar-item">
     <div class="container">
       <footer class="footer">
-        {% include svg-icons.html %}
+        {% include icon-github.html %}
       </footer>
     </div>
   </div>
