--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,15 @@
 
   <!-- Icons -->
 
+  <!--Tags -->
+  {% if site.tags != "" %}
+    {% include collect_tags.html %}
+  {% endif %}
+
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 </head>
+
+
+
+
