--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+comments: true
+mathjax: true
 ---
 
 <div class="post">
@@ -17,6 +19,8 @@ layout: default
   {{ content }}
 </div>
 
+{% include disqus.html %}
+
 <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
@@ -32,3 +36,4 @@ layout: default
     {% endfor %}
   </ul>
 </div>
+
