--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -216,7 +216,7 @@ a.sidebar-nav-item:focus {
   left: 1rem;
   display: block;
   padding: .25rem .75rem;
-  color: rbga(0,0,0,0);
+  color: #505050;
   background-color: #fff;
   border-radius: .25rem;
   cursor: pointer;
