--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -151,7 +151,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   font-size: .875rem; /* 15px */
   color: rgba(255,255,255,.6);
-  background-color: #202020;
+  background-color: rbga(0,0,0,0);
   -webkit-transition: all .3s ease-in-out;
           transition: all .3s ease-in-out;
 }
@@ -216,7 +216,7 @@ a.sidebar-nav-item:focus {
   left: 1rem;
   display: block;
   padding: .25rem .75rem;
-  color: #505050;
+  color: #555;
   background-color: #fff;
   border-radius: .25rem;
   cursor: pointer;
@@ -227,27 +227,29 @@ a.sidebar-nav-item:focus {
   width: 1rem;
   height: .75rem;
   content: "";
-  background-image: -webkit-linear-gradient(to bottom, rbga(0,0,0,0), rbga(0,0,0,0) 20%, #fff 20%, #fff 40%, rbga(0,0,0,0) 40%, rbga(0,0,0,0) 60%, #fff 60%, #fff 80%, rbga(0,0,0,0) 80%, rbga(0,0,0,0) 100%);
-  background-image:    -moz-linear-gradient(to bottom, rbga(0,0,0,0), rbga(0,0,0,0) 20%, #fff 20%, #fff 40%, rbga(0,0,0,0) 40%, rbga(0,0,0,0) 60%, #fff 60%, #fff 80%, rbga(0,0,0,0) 80%, rbga(0,0,0,0) 100%);
-  background-image:     -ms-linear-gradient(to bottom, rbga(0,0,0,0), rbga(0,0,0,0) 20%, #fff 20%, #fff 40%, rbga(0,0,0,0) 40%, rbga(0,0,0,0) 60%, #fff 60%, #fff 80%, rbga(0,0,0,0) 80%, rbga(0,0,0,0) 100%);
-  background-image:         linear-gradient(to bottom, rbga(0,0,0,0), rbga(0,0,0,0) 20%, #fff 20%, #fff 40%, rbga(0,0,0,0) 40%, rbga(0,0,0,0) 60%, #fff 60%, #fff 80%, rbga(0,0,0,0) 80%, rbga(0,0,0,0) 100%);
+  background-image: -webkit-linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
+  background-image:    -moz-linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
+  background-image:     -ms-linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
+  background-image:         linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
 }
+
 
 .sidebar-toggle:active,
 #sidebar-checkbox:focus ~ .sidebar-toggle,
 #sidebar-checkbox:checked ~ .sidebar-toggle {
   color: #fff;
-  background-color: rbga(0,0,0,0);
+  background-color:rgba(0,0,0,0);
 }
 
 .sidebar-toggle:active:before,
 #sidebar-checkbox:focus ~ .sidebar-toggle:before,
 #sidebar-checkbox:checked ~ .sidebar-toggle:before {
-  background-image: -webkit-linear-gradient(to bottom, #fff, #fff 20%, rbga(0,0,0,0) 20%, rbga(0,0,0,0) 40%, #fff 40%, #fff 60%, rbga(0,0,0,0) 60%, rbga(0,0,0,0) 80%, #fff 80%, #fff 100%);
-  background-image:    -moz-linear-gradient(to bottom, #fff, #fff 20%, rbga(0,0,0,0) 20%, rbga(0,0,0,0) 40%, #fff 40%, #fff 60%, rbga(0,0,0,0) 60%, rbga(0,0,0,0) 80%, #fff 80%, #fff 100%);
-  background-image:     -ms-linear-gradient(to bottom, #fff, #fff 20%, rbga(0,0,0,0) 20%, rbga(0,0,0,0) 40%, #fff 40%, #fff 60%, rbga(0,0,0,0) 60%, rbga(0,0,0,0) 80%, #fff 80%, #fff 100%);
-  background-image:         linear-gradient(to bottom, #fff, #fff 20%, rbga(0,0,0,0) 20%, rbga(0,0,0,0) 40%, #fff 40%, #fff 60%, rbga(0,0,0,0) 60%, rbga(0,0,0,0) 80%, #fff 80%, #fff 100%);
+  background-image: -webkit-linear-gradient(to bottom, #fff, #fff 20%, rgba(0,0,0,0) 20%, rgba(0,0,0,0) 40%, #fff 40%, #fff 60%, rgba(0,0,0,0) 60%, rgba(0,0,0,0) 80%, #fff 80%, #fff 100%);
+  background-image:    -moz-linear-gradient(to bottom, #fff, #fff 20%, rgba(0,0,0,0) 20%, rgba(0,0,0,0) 40%, #fff 40%, #fff 60%, rgba(0,0,0,0) 60%, rgba(0,0,0,0) 80%, #fff 80%, #fff 100%);
+  background-image:     -ms-linear-gradient(to bottom, #fff, #fff 20%, rgba(0,0,0,0) 20%, rgba(0,0,0,0) 40%, #fff 40%, #fff 60%, rgba(0,0,0,0) 60%, rgba(0,0,0,0) 80%, #fff 80%, #fff 100%);
+  background-image:         linear-gradient(to bottom, #fff, #fff 20%, rgba(0,0,0,0) 20%, rgba(0,0,0,0) 40%, #fff 40%, #fff 60%, rgba(0,0,0,0) 60%, rgba(0,0,0,0) 80%, #fff 80%, #fff 100%);
 }
+
 
 @media (min-width: 30.1em) {
   .sidebar-toggle {
